# MyLauncherManager

./: CMakeLists.txt  README.md
resources/: resources.qrc
resources/styles/: macos11-dark.qss  macos11.qss
src/: LeftPanel.cpp  LeftPanel.h  MainWindow.cpp  MainWindow.h  RightPanel.cpp  RightPanel.h  main.cpp
src/core/: DesktopFile.cpp  DesktopFile.h  DesktopFileManager.cpp  DesktopFileManager.h
src/delegates/: DesktopFileDelegate.cpp  DesktopFileDelegate.h
src/models/: DesktopFileModel.cpp  DesktopFileModel.h
src/utils/: IconLoader.cpp  IconLoader.h
src/widgets/: AddPage.cpp  AddPage.h  EditPage.cpp  EditPage.h  InfoPage.cpp  InfoPage.h
